--- a/packages/themes/_export.scss
+++ b/packages/themes/_export.scss
@@ -14,7 +14,7 @@
     display: block;
 
     li {
-      padding: .2rem;
+      padding: 0.2rem;
     }
   }
 
@@ -23,11 +23,11 @@
 
     span {
       display: inline-block;
-      border: 1px solid #555;
+      border: 1px solid #555555;
       border-radius: 2px;
-      font-size: .8rem;
+      font-size: 0.8rem;
       font-weight: bold;
-      padding: .2rem;
+      padding: 0.2rem;
       margin-right: 5px;
       margin-bottom: 5px;
     }
