--- a/packages/themes/_gameSetup.scss
+++ b/packages/themes/_gameSetup.scss
@@ -57,7 +57,7 @@
     .dirty-flag {
       position: absolute;
       right: 10px;
-      font-size: .65em;
+      font-size: 0.65em;
     }
   }
 }
