--- a/packages/themes/_modal.scss
+++ b/packages/themes/_modal.scss
@@ -1,4 +1,4 @@
-@import './dependencies/variables';
+@import "./dependencies/variables";
 
 
 .modal-bg {
@@ -113,7 +113,7 @@
     display: inline;
     line-height: 1em;
     font-weight: bold;
-    margin-left: .5em;
+    margin-left: 0.5em;
     width: fit-content;
     background-color: transparent;
   }
