--- a/packages/themes/_typography.scss
+++ b/packages/themes/_typography.scss
@@ -1,5 +1,5 @@
-@import './dependencies/variables';
-@import './dependencies/fonts';
+@import "./dependencies/variables";
+@import "./dependencies/fonts";
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
@@ -59,7 +59,7 @@ a {
 
   svg {
     margin-left: 5px;
-    opacity: .85;
+    opacity: 0.85;
   }
 }
 
