--- a/packages/themes/dependencies/_reset.scss
+++ b/packages/themes/dependencies/_reset.scss
@@ -27,12 +27,12 @@ blockquote, q {
 
 blockquote {
   &:before, &:after {
-    content: '';
+    content: "";
     content: none; } }
 
 q {
   &:before, &:after {
-    content: '';
+    content: "";
     content: none; } }
 
 table {
