--- a/packages/themes/_btns.scss
+++ b/packages/themes/_btns.scss
@@ -100,7 +100,7 @@ span.link {
   &--large {
     font-size: $titleSize;
     line-height: 1em;
-    padding: .6em 1em;
+    padding: 0.6em 1em;
   }
 
   &--active {
@@ -137,7 +137,7 @@ span.link {
 
   &--disabled {
     cursor: not-allowed;
-    opacity: .25;
+    opacity: 0.25;
   }
 
   &--noIcon {
