--- a/packages/themes/_input.scss
+++ b/packages/themes/_input.scss
@@ -27,14 +27,14 @@ select {
 
   background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 123.5 68.5' style='enable-background:new 0 0 123.5 68.5;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:none;stroke:%23D1D1D1;stroke-width:8;stroke-miterlimit:10;%7D .st1%7Bfill:none;stroke:%23D1D1D1;stroke-width:3;stroke-miterlimit:10;%7D%0A%3C/style%3E%3Cpolyline id='XMLID_1_' class='st0' points='108.7,27.2 89.2,46.7 69.8,27.2 '/%3E%3Cline id='XMLID_15_' class='st1' x1='26' y1='2.5' x2='26' y2='65.5'/%3E%3C/svg%3E");
   background-repeat: no-repeat, repeat;
-  background-position: right .5em top 50%, 0 0;
+  background-position: right 0.5em top 50%, 0 0;
   background-size: 2.2em;
 }
 
 
 textarea.material-input,
 input.material-input,
-.flatpickr-input{
+.flatpickr-input {
   display: block;
   padding: 5px;
   margin-bottom: 16px;
@@ -75,7 +75,7 @@ input.material-input,
 
 .input-group {
   & > .input-group-prepend {
-    & >.btn {
+    & > .btn {
       margin-left: 1px;
 
       &:last-child {
@@ -94,12 +94,12 @@ $md-checkbox-checked-color-disabled: rgba(0, 0, 0, 0.26);
 
 $md-checkbox-margin: 1em 0;
 $md-checkbox-size: 1.25em;
-$md-checkbox-padding: .25em;
+$md-checkbox-padding: 0.25em;
 $md-checkbox-border-width: 2px;
 $md-checkbox-border-radius: 0.125em;
 $md-checkmark-width: 0.125em;
-$md-checkmark-color: #fff;
-$md-checkbox-label-padding: .5em;
+$md-checkmark-color: #ffffff;
+$md-checkbox-label-padding: 0.5em;
 
 .md-checkbox {
   position: relative;
@@ -132,11 +132,11 @@ $md-checkbox-label-padding: .5em;
       // box
       width: $md-checkbox-size;
       height: $md-checkbox-size;
-      background: #fff;
+      background: #ffffff;
       border: $md-checkbox-border-width solid $md-checkbox-border-color;
       border-radius: $md-checkbox-border-radius;
       cursor: pointer;
-      transition: background .3s;
+      transition: background 0.3s;
     }
 
     &:after {
@@ -154,7 +154,7 @@ $md-checkbox-label-padding: .5em;
     font-size: inherit;
 
     &:checked {
-      + label:before{
+      + label:before {
         background: $md-checkbox-checked-color;
         border:none;
       }
@@ -173,11 +173,11 @@ $md-checkbox-label-padding: .5em;
     }
 
     &:disabled {
-      + label:before{
+      + label:before {
         border-color: $md-checkbox-border-color-disabled;
       }
       &:checked {
-        + label:before{
+        + label:before {
           background: $md-checkbox-checked-color-disabled;
         }
       }
