--- a/packages/themes/_message-preview.scss
+++ b/packages/themes/_message-preview.scss
@@ -1,4 +1,4 @@
-@import 'dependencies/variables';
+@import "dependencies/variables";
 
 .message-preview {
   padding: 16px 8px 0 8px;
@@ -6,7 +6,7 @@
 
   h3 {
     font-size: 1.4em;
-    padding: .75em 0 .25em;
+    padding: 0.75em 0 0.25em;
   }
 
   span {
