--- a/packages/themes/_turnProgresion.scss
+++ b/packages/themes/_turnProgresion.scss
@@ -26,7 +26,7 @@
   display: inline-block;
   width: 20px;
   height: 20px;
-  background-image: url('dependencies/images/chat-blue@2x.png');
+  background-image: url("dependencies/images/chat-blue@2x.png");
   background-size: 20px 20px;
   background-position: center;
 }
@@ -47,7 +47,7 @@
   time {
     font-size: 12px;
     font-weight: 600;
-    font-family: 'Open Sans', 'sans-serif';
+    font-family: "Open Sans", "sans-serif";
     display: inline-block;
     padding-top: 8px;
   }
