--- a/packages/themes/_version.scss
+++ b/packages/themes/_version.scss
@@ -6,7 +6,7 @@
   white-space: nowrap;
   font-size: 0;
   margin: 0;
-  background-color: rgba(255, 255, 255, .5);
+  background-color: rgba(255, 255, 255, 0.5);
   padding-left: 10px;
   border-radius: 0 5px 0 0;
 
