--- a/packages/themes/demo.scss
+++ b/packages/themes/demo.scss
@@ -1,4 +1,4 @@
-@import 'dependencies/variables';
+@import "dependencies/variables";
 
 .demo-content-wrapper {
   #umpire {
@@ -153,7 +153,7 @@
       }
 
       .paragraph {
-        font-size: .75rem;
+        font-size: 0.75rem;
       }
     }
   }
