--- a/packages/themes/dependencies/_variables.scss
+++ b/packages/themes/dependencies/_variables.scss
@@ -1,7 +1,7 @@
 $darkGrey: rgb(20,20,20);
 $grey: #707070;
 $grey2: #a9a9a9;
-$lightGrey: rgba(224, 224, 224, .5);
+$lightGrey: rgba(224, 224, 224, 0.5);
 $greyBg: #f5f5f5;
 $forceDefaultColor: #4bead1;
 
@@ -16,7 +16,7 @@ $paragraphSize: 16px;
 $baseColor: #212529;
 $primaryColor: #415b76;
 $primaryTriadColor: #ffffff;
-$primaryTriadColorTransparent: rgba(131, 88, 85, .25);
+$primaryTriadColorTransparent: rgba(131, 88, 85, 0.25);
 $secondaryColor: #394959;
 $successColor: rgba(171,199,97,1);
 $warningColor: #fff3cd;
@@ -56,7 +56,7 @@ $textFieldAdmin: #3a3a3a;
 }
 
 @mixin activeShadow() {
-  box-shadow: 0 0 5px 3px rgba(171,199,97,.75);
+  box-shadow: 0 0 5px 3px rgba(171,199,97,0.75);
 }
 
 @mixin shadow() {
@@ -76,17 +76,17 @@ $textFieldAdmin: #3a3a3a;
 }
 
 @mixin transition() {
-  transition: box-shadow 0.3s cubic-bezier(.25,.8,.25,1);
+  transition: box-shadow 0.3s cubic-bezier(0.25,0.8,0.25,1);
 }
 
 @mixin transitionPadding() {
-  transition: padding 0.3s cubic-bezier(.25,.8,.25,1);
+  transition: padding 0.3s cubic-bezier(0.25,0.8,0.25,1);
 }
 
 @mixin typo-primary {
-  font-family: 'Open Sans', 'sans-serif';
+  font-family: "Open Sans", "sans-serif";
 }
 
 @mixin typo-secondary {
-  font-family: 'Alegreya Sans', 'sans-serif';
+  font-family: "Alegreya Sans", "sans-serif";
 }
