configured stylelint to run and work with prettier for the themes package

--- a/packages/themes/_base.scss
+++ b/packages/themes/_base.scss
@@ -6,5 +6,6 @@ body {
 body {
   background-color: transparent;
   background-blend-mode: overlay;
-  background-image: radial-gradient(circle at 50% 48%, #013c5d, #001323), linear-gradient(to right, #00e8ff, #004d66);
+  background-image: radial-gradient(circle at 50% 48%, #013c5d, #001323),
+    linear-gradient(to right, #00e8ff, #004d66);
 }
