--- a/packages/themes/_print.scss
+++ b/packages/themes/_print.scss
@@ -6,7 +6,7 @@
     min-height: 29.7cm;
     padding: 2cm;
     margin: 1cm auto;
-    box-shadow: 0 0 5px rgba(0,0,0,0.15);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
     border-radius: 5px;
     box-sizing: border-box;
     position: relative;
