--- a/packages/themes/_typography.scss
+++ b/packages/themes/_typography.scss
@@ -1,16 +1,31 @@
 @import "./dependencies/variables";
 @import "./dependencies/fonts";
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 500;
   margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6, span, p, a, button {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span,
+p,
+a,
+button {
   font-family: "Open Sans", "sans-serif";
 }
 
-p,a {
+p,
+a {
   font-size: 16px;
 }
 
@@ -35,7 +50,6 @@ a {
 }
 
 .heading {
-
   &--sml {
     color: $darkGrey;
     font-weight: bold;
