--- a/packages/themes/dependencies/_variables.scss
+++ b/packages/themes/dependencies/_variables.scss
@@ -1,4 +1,4 @@
-$darkGrey: rgb(20,20,20);
+$darkGrey: rgb(20, 20, 20);
 $grey: #707070;
 $grey2: #a9a9a9;
 $lightGrey: rgba(224, 224, 224, 0.5);
@@ -18,9 +18,9 @@ $primaryColor: #415b76;
 $primaryTriadColor: #ffffff;
 $primaryTriadColorTransparent: rgba(131, 88, 85, 0.25);
 $secondaryColor: #394959;
-$successColor: rgba(171,199,97,1);
+$successColor: rgba(171, 199, 97, 1);
 $warningColor: #fff3cd;
-$errorColor: #A33730;
+$errorColor: #a33730;
 $notificationColor: #4e895d;
 $linkColor: #2f86c5;
 $actionSecondaryColor: #3ef1ea;
@@ -56,31 +56,33 @@ $textFieldAdmin: #3a3a3a;
 }
 
 @mixin activeShadow() {
-  box-shadow: 0 0 5px 3px rgba(171,199,97,0.75);
+  box-shadow: 0 0 5px 3px rgba(171, 199, 97, 0.75);
 }
 
 @mixin shadow() {
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 @mixin drawerShadow() {
-  box-shadow: 0 -2px 4px -1px rgba(0,0,0,0.2), 0 -4px 5px 0 rgba(0,0,0,0.14), 0 -1px 10px 0 rgba(0,0,0,0.12);
+  box-shadow: 0 -2px 4px -1px rgba(0, 0, 0, 0.2),
+    0 -4px 5px 0 rgba(0, 0, 0, 0.14), 0 -1px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 @mixin snackbarShadow() {
-  box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2), 0 6px 10px 0 rgba(0,0,0,0.14), 0 1px 18px 0 rgba(0,0,0,0.12);
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
+    0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
 
 @mixin btnDown() {
-  box-shadow: 0 0 0 rgba(0,0,0,0.16), 0 0 0 rgba(0,0,0,0.23);
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0.16), 0 0 0 rgba(0, 0, 0, 0.23);
 }
 
 @mixin transition() {
-  transition: box-shadow 0.3s cubic-bezier(0.25,0.8,0.25,1);
+  transition: box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 @mixin transitionPadding() {
-  transition: padding 0.3s cubic-bezier(0.25,0.8,0.25,1);
+  transition: padding 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 @mixin typo-primary {
