--- a/packages/themes/_gameSetup.scss
+++ b/packages/themes/_gameSetup.scss
@@ -212,19 +212,25 @@ input#editable-title {
 
     th,
     td {
-      width: 25%;
+      width: 20%;
       vertical-align: middle;
     }
 
-    th:nth-of-type(2),
-    td:nth-of-type(2),
-    th:nth-of-type(3),
-    td:nth-of-type(3) {
-      width: 32.5%;
-    }
-
     th:nth-of-type(4),
-    td:nth-of-type(4) {
+    td:nth-of-type(4),
+    th:nth-of-type(5),
+    td:nth-of-type(5) {
+      width: 15%;
+      & > div {
+        display: flex;
+        justify-content: center;
+      }
+      svg {
+        margin: 0;
+      }
+    }
+    th:nth-of-type(6),
+    td:nth-of-type(6) {
       width: 10%;
     }
 
