--- a/packages/themes/_playerUi.scss
+++ b/packages/themes/_playerUi.scss
@@ -723,3 +723,14 @@
     right: 0;
   }
 }
+
+.link-admin {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: white;
+
+  &:hover {
+    color: white;
+  }
+}
