fixed messagelist key issue and added message feedback feature

--- a/packages/themes/App.scss
+++ b/packages/themes/App.scss
@@ -13,6 +13,7 @@
 @import "sidebar";
 @import "json-editor";
 @import "message-preview";
+@import "message-reply";
 @import "preview-editor";
 @import "searchlist";
 @import "modal";
