--- a/packages/mapping/src/components/mapping/styles.scss
+++ b/packages/mapping/src/components/mapping/styles.scss
@@ -13,3 +13,14 @@
   width: 50%;
   margin: 0 auto;
 }
+
+.leaflet-container .leaflet-control-mouseposition {
+  background-color: rgba(255, 255, 255, 0.7);
+  box-shadow: 0 0 5px #bbb;
+  padding: 0 5px;
+  margin:0;
+  color: #333;
+  font: 11px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
+}
+
+
