added rgb colours and updated movement listener to use new green colour

--- a/packages/client/src/Components/Mapping/styles.scss
+++ b/packages/client/src/Components/Mapping/styles.scss
@@ -31,10 +31,13 @@
 
 .platform-force {
   &-blue {
-   background-color: blue; 
+   background-color: #000fff; 
   }
   &-red {
-    background-color: red;
+    background-color: #ff0000;
+  }
+  &-green {
+    background-color: #19bd37;
   }
 }
 
