style the turn marker label

--- a/packages/client/src/Components/Mapping/styles.scss
+++ b/packages/client/src/Components/Mapping/styles.scss
@@ -53,3 +53,8 @@ $platforms: frigate, destroyer, mcmv, unknown, agi, fast-attack-craft, uas, merc
   }   
 }
 
+div.map-turn-marker {
+  width: 200px;
+  padding-left: 15px;
+  color: #000;
+}
