--- a/packages/client/src/Components/Mapping/components/FormContainer/styles.scss
+++ b/packages/client/src/Components/Mapping/components/FormContainer/styles.scss
@@ -20,6 +20,7 @@
         background-color: #e6e6e6;
         border-radius: 5px;
         padding: .5rem 1.5rem;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
 
     .input-container {
