changing icon names, refactoring if statement

--- a/packages/client/src/Components/Mapping/styles.scss
+++ b/packages/client/src/Components/Mapping/styles.scss
@@ -57,4 +57,10 @@ div.map-turn-marker {
   width: 200px;
   padding-left: 15px;
   color: #000;
+ /*  opacity: 0.45 !important; */
 }
+
+/* div.map-turn-marker:hover {
+  opacity: 1 !important;
+} */
+
