--- a/packages/client/src/Components/Mapping/components/FormContainer/styles.scss
+++ b/packages/client/src/Components/Mapping/components/FormContainer/styles.scss
@@ -1,7 +1,8 @@
 .mapping-form-container {
-    padding: 2rem;
     width: 355px;
+    padding: .3rem;
     color: #424344;
+    overflow: hidden;
 
     h1, h2, h3, h4 {
         font-size: 1.3rem;
