--- a/packages/client/src/Components/Mapping/styles.scss
+++ b/packages/client/src/Components/Mapping/styles.scss
@@ -47,7 +47,7 @@
 
  .leaflet-popup-content-wrapper {
    background-color: rgba(#fff, .8);
-   box-shadow: none;
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 5px;
  }
 
