--- a/packages/client/src/Components/Mapping/styles.scss
+++ b/packages/client/src/Components/Mapping/styles.scss
@@ -72,3 +72,9 @@ div.map-turn-marker {
   padding-left: 15px;
   color: #000;
 }
+
+.leaflet-marker-icon {
+  &.selected {
+    border: 4px solid rgba(255, 255, 255, 0.5);
+  }
+}
