--- a/packages/client/src/Components/Mapping/styles.scss
+++ b/packages/client/src/Components/Mapping/styles.scss
@@ -74,7 +74,9 @@ div.map-turn-marker {
 }
 
 .leaflet-marker-icon {
+  border: 1px solid rgba(255, 255, 255, 1);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   &.selected {
-    border: 4px solid rgba(255, 255, 255, 0.5);
+    border: 4px solid rgba(255, 255, 255, .5);
   }
 }
