--- a/packages/client/src/Components/Mapping/styles.scss
+++ b/packages/client/src/Components/Mapping/styles.scss
@@ -28,6 +28,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 80%;
+  box-shadow: 4px 4px 3px rgba(0, 0, 0, 0.45);
 }
 
 .platform-force {
