--- a/packages/client/src/Components/Mapping/styles.scss
+++ b/packages/client/src/Components/Mapping/styles.scss
@@ -42,26 +42,26 @@
   &-blue {
    background-color: #000fff;   
    &.platform-abnormal-condition {
-    background-color: #000a91;
+    background-color: #d4d7fc;
   }
 }
   &-red {
     background-color: #ff0000;
     &.platform-abnormal-condition {
-      background-color: #8f0303;
+      background-color: #ffcece;
     }
   }
   &-green {
     background-color: #19bd37;
     &.platform-abnormal-condition {
-      background-color: #0e6a1f;
+      background-color: #ADC3AC;
     }
     }
   &-unknown {
     background-color: #999; 
    }
    &.platform-abnormal-condition {
-    background-color: rgb(82, 82, 82);
+    background-color: rgb(222, 222, 222);
   }
 }
 
