--- a/packages/client/src/Components/Mapping/components/FormContainer/styles.scss
+++ b/packages/client/src/Components/Mapping/components/FormContainer/styles.scss
@@ -1,6 +1,7 @@
+// TODO: Refactor out all the floats
+
 .mapping-form-container {
     width: 300px;
-    padding: .3rem;
     color: #424344;
     overflow: hidden;
 
@@ -14,6 +15,11 @@
         color: #828282;
         position: absolute;
         left: 0;
+    }
+
+    form {
+        padding: 1rem;
+        overflow: hidden;
     }
     
     
@@ -35,9 +41,10 @@
                position: relative;
            }
        
-        input{
+        input {
             float: left;
             margin-right: .5rem;
+            margin-top: .1rem;
         }
        }
 
@@ -52,6 +59,17 @@
             padding: 2px;
             text-align: center;
             margin: 0 1rem;
+           }
+       }
+       &.button-group {
+           padding-left: 0;
+           padding-bottom: .5rem;
+           overflow: hidden;
+           button {
+               float: right;
+           }
+           button + button {
+               margin-right: 1rem;
            }
        }
     }
