--- a/packages/client/src/Components/Mapping/styles.scss
+++ b/packages/client/src/Components/Mapping/styles.scss
@@ -51,9 +51,13 @@
  }
 
  .leaflet-popup-content-wrapper {
-   background-color: rgba(#fff, .8);
+   background-color: rgba(#fff, .95);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 5px;
+ }
+
+ .leaflet-popup-content {
+   margin: 0;
  }
 
  .leaflet-popup-tip-container {
