--- a/packages/client/src/Components/Mapping/components/FormContainer/styles.scss
+++ b/packages/client/src/Components/Mapping/components/FormContainer/styles.scss
@@ -12,7 +12,8 @@
         font-weight: bold;
         margin-bottom: 1rem;
     }
-
+    
+    .label,
     label {
         color: #828282;
         position: absolute;
