--- a/packages/themes/dependencies/flexlayout-react.scss
+++ b/packages/themes/dependencies/flexlayout-react.scss
@@ -102,6 +102,11 @@
   background-color: rgba(255, 255, 255, 0.1);
 }
 
+.flexlayout__container {
+  width: 100%;
+  height: 100%;
+}
+
 .flexlayout__tab_button {
   cursor: pointer;
   padding: 2px 16px 3px;
@@ -394,5 +399,3 @@
   bottom:0;
   right:0;
 }
-
-
