state and speed are now disabled unless the plan is rejected. Also replaced 'accept' and 'reject' with 'reviewed'

--- a/packages/client/src/Components/Mapping/components/FormContainer/styles.scss
+++ b/packages/client/src/Components/Mapping/components/FormContainer/styles.scss
@@ -24,7 +24,10 @@
         padding: 1rem;
         overflow: hidden;
     }
-    
+    label.disabled,
+    input:disabled {
+        opacity: .6
+    }
     
     button {
         float: right;
