--- a/packages/client/src/Components/Mapping/components/FormChildAdjudication/styles.scss
+++ b/packages/client/src/Components/Mapping/components/FormChildAdjudication/styles.scss
@@ -46,24 +46,14 @@
 
         }
     }
-    .plan {
-        &-accepted,
-        &-rejected {
-            position: absolute;
-            right: 1rem;
-            top: 3.5rem;
-            padding: .2rem 1rem;
-            border-radius: .7rem;
-        }
-        &-accepted {
-            color: darken(rgb(149, 204, 68), 20%);
-            border: 1px dotted rgb(149, 204, 68);
-            background-color: rgba(149, 204, 68, .4);
-        }
-        &-rejected {
-            color: darken(rgb(209, 29, 29), 20%);
-            border: 1px dotted rgb(209, 29, 29);
-            background-color: rgba(209, 29, 29, 0.4);
-        }
+    .plan-reviewed {
+        position: absolute;
+        right: 1rem;
+        top: 3.5rem;
+        padding: .2rem 1rem;
+        border-radius: .7rem;
+        color: darken(rgb(149, 204, 68), 20%);
+        border: 1px dotted rgb(149, 204, 68);
+        background-color: rgba(149, 204, 68, .4);
     }
 }
