added the ability to animate the entry/exit of components

--- a/packages/client/src/Components/Mapping/components/FormChildAdjudication/styles.scss
+++ b/packages/client/src/Components/Mapping/components/FormChildAdjudication/styles.scss
@@ -57,3 +57,26 @@
         background-color: rgba(149, 204, 68, .4);
     }
 }
+
+.slide-enter,
+.slide-leave {
+    overflow: hidden;
+}
+
+.slide-enter {
+    max-height: 0;
+  }
+  
+.slide-enter.slide-enter-active {
+    transition: max-height 500ms ease-in-out;
+    max-height: 1000px;
+}
+
+.slide-leave {
+    max-height: 1000px;
+}
+
+.slide-leave.slide-leave-active {
+    transition: max-height 200ms ease-in-out;
+    max-height: 0;
+}
