--- a/packages/client/src/Components/Mapping/styles.scss
+++ b/packages/client/src/Components/Mapping/styles.scss
@@ -115,3 +115,9 @@ div.map-turn-marker {
 .marker-hidden {
   visibility: hidden;
 }
+
+.easy-button-container {
+  width:20px; // to force buttons to be displayed vertically
+  box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+  border-radius: 4px;
+}
